--- a/GrimorioApp/package.json
+++ b/GrimorioApp/package.json
@@ -22,14 +22,22 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.3.4",
+    "@angular/cdk": "^20.2.9",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
+    "@angular/material": "^20.2.9",
+    "@angular/material-moment-adapter": "^20.2.9",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "chart.js": "^4.5.1",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "sweetalert2": "^11.26.2",
+    "tslib": "^2.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@angular/build": "^20.3.5",
