--- a/GrimorioApp/angular.json
+++ b/GrimorioApp/angular.json
@@ -21,7 +21,7 @@
                 "input": "public"
               }
             ],
-            "styles": ["@angular/material/prebuilt-themes/azure-blue.css", "src/styles.css"]
+            "styles": ["src/custom-theme.scss", "src/styles.css"]
           },
           "configurations": {
             "production": {
