Implementacion de JWT Autorizacion y Autenticacion con roles - proteccion de rutas en angular con guards  - proteccion de controladores en api - refactor componentes reutilizables angular - creacion de cartas

--- a/GrimorioAPI/Src/SistemaVentas.API/appsettings.json
+++ b/GrimorioAPI/Src/SistemaVentas.API/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "GrimorioDB": "Server=.\\SQLEXPRESS; DataBase=GrimorioDB; Trusted_Connection=True; TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "TU_SUPER_SECRETO_LARGO_Y_ALEATORIO_32+_CHARS",
+    "Issuer": "Grimorio.Api",
+    "Audience": "Grimorio.Client",
+    "ExpiresMinutes": 60
   }
 }
